--- a/info/info.html
+++ b/info/info.html
@@ -38,7 +38,7 @@
       <div class="linkinfo">
         <a href="https://t.me/theWhiteBio" class="linksinfo"><b>Переходник</b></a>
         <a href="https://t.me/WhiteDragonApplicationBot" class="linksinfo"><b>Бот для заявок</b></a>
-        <a href="/index.html" class="linksinfo"><b>Обратно в меню</b></a>
+        <a href="/main/index.html" class="linksinfo"><b>Обратно в меню</b></a>
       </div>
     </div>
   </body>
