--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </p>
         
         <div class="button-links">
-            <a href="/info/info.html" class="button-link" target="_blank"><b>Подробнее</b></a>
+            <a href="/main/info/info.html" class="button-link" target="_blank"><b>Подробнее</b></a>
             <a href="news/news.html" class="button-link" target="_blank"><b>Новости</b></a>
         </div>
     </div>
